# EDO_COMPLETE

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt
api/: db.py  jobs.py  main.py  models.py
api/routers/: autofill.py  complete.py  contributions.py  dadata.py  jobs.py  receipt.py
app/: __init__.py
app/models/: __init__.py
app/services/: __init__.py  contribution_calculator.py  pdf_overlay.py  utils.py  xml_generator.py
core/: errors.py  pipeline.py  progress.py
docs/: ADR-001-architecture.md  ADR-002-pixel-perfect-rendering.md  ADR-003-receipts-and-metadata.md  ADR-004-declaration-data-flow.md  SOURCES_INVENTORY.md
handoff/pr31_filler/: MASTER_PROMPT.md  METHOD.md  README.md  STATUS.md
migrations/: env.py
migrations/versions/: 0001_initial.py
modules/: usn_declaration_adapter.py
modules/declaration_filler/: README.md  __init__.py  declaration_data.py  pdf_overlay_filler.py
modules/edo_stamps/: README.md  __init__.py  edo_core.py  edo_kontur.py  (+4 more)
scripts/: extract_fields_from_reference.py  make_blank_from_reference.py  make_blank_raster.py  make_blank_raster_auto.py  sync_sources.sh  sync_stamps.sh
tests/: pixel_diff.py  test_blank_decl_2025.py  test_decl_rendering.py  test_decl_with_stamps.py  test_declaration_data.py  test_e2e.py  test_fields_decl_2025.py  test_fields_json.py  test_page_normalizer.py  test_pixel_diff_declaration.py  test_receipt_data.py  test_receipt_renderer.py  test_smoke.py
tools/: add_stamp_padding.py
ui/: index.html
(+49 files in other folders)
